# computer-use-agent-course-project

./: .gitignore  AGENTS.md  README.md  pyproject.toml
OSWorld_examples/: README.md  manifest.json  osworld_windows_recommended_tasks_with_links.xlsx  prepare_osworld_assets.py  run_case.py
OSWorld_examples/assets/external_targets/: 5990457f-2adb-467b-a4af-5c857c92d762__Yann_LeCun_Google_Scholar_profile.url
OSWorld_examples/assets/initial/: 185f29bd-5da0-40a6-b69c-ba7f4e0324ef__Employee Performance Evaluation Summary.xlsx  3b27600c-3668-4abd-8f84-7bcdebbccbdb__lec17-gui-events.pptx  4188d3a4-077d-46b7-9c86-23e1a036f6c1__Freeze_row_column.xlsx  4bcb1253-a636-4df4-8cb0-a35c04dfef31__View_Person_Organizational_Summary.docx  51b11269-2ca8-4b2a-9163-f21758420e78__Arrang_Value_min_to_max.xlsx  (+3 more)
OSWorld_examples/cases/: excel_freeze_headers.json  excel_highlight_weekends.json  excel_sort_amounts.json  h2o_subscript.json  multiapp_performance_pdfs.json  ppt_blue_background.json  ppt_columbus_cover.json  ppt_strikethrough_todo.json  scholar_yann_lecun_researcher.json  word_export_pdf.json
config/: README.md  models.example.json
doc/: architecture.md  commit-conventions.md  log.md  progress.md  task-workflow.md  work-template.md
doc/agent_log/: 2026-06-22-1735-完成prd1-terminal-agent.md
doc/current_tasks/: 2026-06-22-1735-完成prd1-terminal-agent.md
doc/project/: project-design.md  runtime-design.md  tooling-design.md
doc/references/: README.md  anthropic-computer-use.md  openai-computer-use.md  osworld.md  ui-tars-desktop.md  windows-use.md
src/computer_use_agent/: __init__.py  agent_common.py  agent_prompts.py  agent_tools.py  autonomous_runtime.py  autonomous_runtime_helpers.py  autonomous_terminal_runtime.py  cli.py  computer_agent.py  examiner_agent.py  examiner_runtime.py  graph_runtime.py  run_store.py  runtime.py  runtime_state.py  sample_tasks.py  terminal_agent.py  tool_smoke.py  ui_chainlit.py
tasks/: prd-mvp-1-terminal-agent.md  prd-mvp-2-gui-basic-actions.md  prd-mvp-3-element-location.md  prd-mvp-4-examiner-rework-loop.md  prd-mvp-5-demo-packaging.md
tests/: test_autonomous_runtime.py  test_autonomous_terminal_runtime.py  test_cli.py  test_computer_agent.py  test_desktop_backend.py  test_element_location.py  test_examiner_agent.py  test_gui_actions.py  test_run_command.py  test_runtime_execution.py  test_runtime_state.py  test_screenshot.py  test_terminal_agent.py  test_tool_smoke.py
(+22 files in other folders)
