[project]
name = "computer-use-agent"
version = "0.1.0"
description = "Terminal-first MVP for a Windows-oriented computer use agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/computer_use_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
