[project]
name = "computer-use-agent"
version = "0.1.0"
description = "Terminal-first MVP for a Windows-oriented computer use agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "comtypes>=1.4.11; platform_system == 'Windows'",
  "fuzzywuzzy>=0.18.0",
  "langchain>=0.3.26",
  "langchain-openai>=0.3.28",
  "langgraph>=0.6.1",
  "pillow>=11.2.1",
  "pyautogui>=0.9.54",
  "python-levenshtein>=0.27.1",
]

[dependency-groups]
dev = [
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/computer_use_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
  "src/computer_use_agent/tools/_uia",
]

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
exclude = "(^|[\\/])src[\\/]computer_use_agent[\\/]tools[\\/]_uia([\\/]|$)"
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["computer_use_agent.tools._uia.*"]
ignore_errors = true
